[#2694] Fixed positioning and scrollbar issue in Fx with success status message on save

--- a/manager/templates/default/css/index.css
+++ b/manager/templates/default/css/index.css
@@ -1083,7 +1083,7 @@ input.x-static-text-field {
 
 /* status messages */
 .modx-status-msg {
-    position: absolute;
+    position: fixed;
     left: 70%;
     top: 10px;
     width: 25%;
@@ -1091,6 +1091,7 @@ input.x-static-text-field {
     background: #f4f4f4;
     padding: 5px;
     opacity: .8;
+    margin: 0;
     -moz-border-radius: 4px;
     -webkit-border-radius: 4px;
     border-radius: 4px;
